# kurppa

./: .dockerignore  .env.sample  .eslintrc.json  .gitignore  Dockerfile  Dockerfile.migrate  README.md  cloudbuild.yaml  next.config.mjs  package-lock.json  package.json  tailwind.config.ts  tsconfig.json
.github/workflows/: build.yml
app/: layout.tsx  page.tsx
app/components/: ActionButtons.tsx  ActiveObservation.tsx  DecipherStatus.tsx  InfoDialog.tsx  Instructions.tsx  LastObservation.tsx  LocationSwitch.tsx  LoginButton.tsx  Map.tsx  MapButton.tsx  MapDialog.tsx  MapMarkers.tsx  MapWrapper.tsx  NavBar.tsx  ObservationList.tsx  ObservationMap.tsx  ObservationsButton.tsx  ObservationsDialog.tsx  PlaybackButton.tsx  ProcessingStatus.tsx  ProcessingStatusButton.tsx  Providers.tsx  RecordButton.tsx  RecordStepStatus.tsx  RecordView.tsx  Root.tsx  SettingsButton.tsx  SettingsDialog.tsx  StatusToast.tsx  ThemeSelector.tsx  TranscriptionStatus.tsx  WelcomeView.tsx  decipher.tsx  transcription.tsx
app/db/: observations.ts  users.ts
app/hooks/: useDecipher.ts  useLocation.ts  useObservations.ts  useProcessing.ts  useRecordVoice.ts  useTheme.ts  useTranscribe.ts
app/prompting/: prompt.ts  prompt.yaml
app/resources/: linnut.json
app/utils/: blobToBase64.ts  config.ts  shared.ts  (+1 more)
prisma/: schema.prisma
prompt-engine/: index.ts  package.json  prompt.yaml
pulumi/: Pulumi.dev.yaml  Pulumi.yaml  README.md  index.ts  package.json
python/: .gitignore  README.md  ask.py  chat.py  condaenv.yaml  embed.py  pyproject.toml  scrape.py
scripts/: README.md  linnut.mts
(+11 files in other folders)
