[tool.poetry]
name = "kurppa"
version = "0.1.0"
description = ""
authors = ["Kimmo Sääskilahti"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.32.3"
ruff = "^0.6.8"
openai = "^1.50.2"
pandas = "^2.2.3"
tiktoken = "^0.7.0"
scipy = "^1.14.1"
gradio = "^4.44.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
